--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^6.1.8"
+    "mongoose": "^6.1.8",
+    "nodemailer": "^6.7.2"
   },
   "devDependencies": {
     "dotenv": "^14.3.2",
