--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "google-map-react": "^2.1.10",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
@@ -24,14 +25,12 @@
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
-
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  
   "eslintConfig": {
     "extends": [
       "react-app",
